Added target to the 2023 .gitignore

--- a/2023/.gitignore
+++ b/2023/.gitignore
@@ -1,3 +1,5 @@
 # Ignore all .txt files as these are likely inputs. 
 # The creator has requested inputs do not be included in the repo.
 **/*.txt
+
+**/target/
