--- a/2023/Day25/Cargo.toml
+++ b/2023/Day25/Cargo.toml
@@ -6,3 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+eframe = "0.24.1"
+egui = "0.24.1"
+egui_graphs = "0.17.1"
+petgraph = "0.6.4"
